# SlackServiceBot

./: .gitignore  pyproject.toml  terraform_log.txt
.github/workflows/: deploy.yml
Terraslack/: main.tf  terraform.tfstate
src/slack_service/: config.py  main.py  schemas.py  slack_client.py
src/slack_service/static/: index.html
